<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".DoctorPage">

    <TextView

        android:id="@+id/tvComplaint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/name"
        android:textColor="@android:color/tertiary_text_light"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnBookAppointment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:background="@drawable/btn_round"
        android:text="@string/Button_Book"
        android:textColor="@android:color/tertiary_text_light"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDocEmail" />

    <Button
        android:id="@+id/btnGetOnlineHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:background="@drawable/btn_round"
        android:text="@string/Button_Complaint"
        android:textColor="@android:color/tertiary_text_light"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.435"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBookAppointment" />

    <TextView
        android:id="@+id/tvDocGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/gender"
        android:background="@drawable/round"
        android:textColor="@android:color/tertiary_text_light"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvComplaint" />

    <TextView
        android:id="@+id/tvDocEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/tertiary_text_light"
        android:background="@drawable/round"
        android:layout_marginTop="14dp"
        android:text="@string/Email"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDocGender" />

    <TextView
        android:id="@+id/tvDocContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/tertiary_text_light"
        android:background="@drawable/round"
        android:layout_marginTop="12dp"
        android:text="@string/phoneNumber"
        app:layout_constraintEnd_toStartOf="@+id/tvDocPostal"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDocEmail" />

    <TextView
        android:id="@+id/tvDocPostal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/tertiary_text_light"
        android:background="@drawable/round"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/postalCode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDocEmail" />

    <TextView
        android:id="@+id/tvDocConsultationFee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/round"
        android:text="@string/Label_OnlineFees"
        android:textColor="@android:color/tertiary_text_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDocContact" />

    <TextView
        android:id="@+id/tvDocBookFee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:text="@string/Label_BookingFees"
        android:textColor="@android:color/tertiary_text_light"
        android:background="@drawable/round"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDocPostal" />
</androidx.constraintlayout.widget.ConstraintLayout>