<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tvMain"
        android:layout_width="416dp"
        android:layout_height="102dp"
        android:background="@color/colorPrimary"
        android:drawableStart="@mipmap/ic_logo_round"
        android:drawableLeft="@mipmap/ic_logo_foreground"
        android:drawablePadding="30dp"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:text="@string/app_title"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAppointTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="63dp"
        android:layout_marginRight="63dp"
        android:layout_marginBottom="30dp"
        android:text="@string/Welcome"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tvMain"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvMainBook"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="20dp"
        android:drawableTop="@mipmap/ic_booky_foreground"
        android:paddingLeft="5dp"
        android:text="@string/Button_Book"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAppTitle"
        android:paddingStart="5dp" />

    <TextView
        android:id="@+id/tvMainDocInfo"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:drawableTop="@mipmap/ic_doctorinfo_foreground"
        android:paddingLeft="15dp"
        android:text="@string/Doc_Info"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAppTitle" />

    <TextView
        android:id="@+id/tvMainAsk"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="48dp"
        android:drawableTop="@mipmap/ic_askadoctor_foreground"
        android:paddingLeft="15dp"
        android:text="@string/Ask_Doc"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toStartOf="@+id/tvMainManage"
        app:layout_constraintHorizontal_bias="0.378"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMainBook" />

    <TextView
        android:id="@+id/tvMainManage"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:drawableTop="@mipmap/ic_manageaccount_foreground"
        android:paddingLeft="15dp"
        android:text="@string/Manage_Account"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMainDocInfo" />

    <TextView
        android:id="@+id/tvAppTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:text="@string/App_Info"
        android:textColor="@android:color/tertiary_text_light"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMain" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_round"
        android:text="@string/start"
        android:textColor="@android:color/tertiary_text_light"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAppTitle"
        app:layout_constraintVertical_bias="0.9" />


</androidx.constraintlayout.widget.ConstraintLayout>